# Projekt_Serwer

./: CMakeLists.txt  json.h  main.cpp
Klasy/: ClassWithIdAndName.cpp  ClassWithIdAndName.h  Connection.cpp  Connection.h  DatabaseConnection.cpp  DatabaseConnection.h  GroupMessage.cpp  GroupMessage.h  Group_Message.cpp  Group_Message.h  PrivateMessage.cpp  PrivateMessage.h  Private_Message.cpp  Private_Message.h  ReceiveAndResend.cpp  ReceiveAndResend.h  group.cpp  group.h  user.cpp  user.h
